Refresh Recipe by removing setup tenant job (#2317)
* update nss resources br label

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* remove setup tenant job for 4.7 single recipe

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* remove setup tenant and restore nss for 4.7 multi recipes

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* remove job and use nss for 4.5 recipes

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

---------

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -136,35 +136,7 @@ spec:
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=crd
-      name: commonservice-crd
-      type: resource
-    - includeClusterResources: true
-      includedResourceTypes:
-        - deployments
-        - roles
-        - serviceaccounts
-        - rolebindings
-        - configmaps
-      labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
-      name: setup-tenant-resources
-      type: resource
-    - includeClusterResources: true
-      includedResourceTypes:
-        - jobs
-      labelSelector: foundationservices.cloudpak.ibm.com=setup-tenant-job
-      name: setup-tenant-job-yaml
-      restoreStatus:
-        excludedResources:
-          - jobs
-      type: resource
-    - labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
-      name: cpfs-util-volume
-      type: volume
-    - includeClusterResources: true
-      includedResourceTypes:
-        - customresourcedefinitions.apiextensions.k8s.io
-      labelSelector: foundationservices.cloudpak.ibm.com=crd
-      name: nss-crd
+      name: commonservices-crd
       type: resource
     - includedResourceTypes:
         - commonservices.operator.ibm.com
@@ -172,9 +144,12 @@ spec:
       name: commonservice-cr
       type: resource
     - includedResourceTypes:
+        - roles
+        - rolebindings
+        - serviceaccounts
         - namespacescopes.operator.ibm.com
       labelSelector: foundationservices.cloudpak.ibm.com=nss
-      name: nss-cr
+      name: nss-resources
       type: resource
     - includedResourceTypes:
         - operandrequests.operator.ibm.com
@@ -269,24 +244,24 @@ spec:
       timeout: 600
       type: check
     - chks:
-        - condition: '{$.status.phase} == {"Running"}'
+        - condition: '{$.spec.replicas} == {$.status.readyReplicas}'
           name: podReady
           onError: fail
-          timeout: 1200
-      labelSelector: app.kubernetes.io/name=operand-deployment-lifecycle-manager
-      name: odlm-check
+          timeout: 600
+      name: nss-check
+      nameSelector: ibm-namespace-scope-operator
       namespace: <operator namespace>
       onError: fail
-      selectResource: pod
-      timeout: 1200
+      selectResource: deployment
+      timeout: 600
       type: check
     - chks:
         - condition: '{$.status.phase} == {"Running"}'
           name: podReady
           onError: fail
           timeout: 600
-      labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
-      name: setup-tenant-check
+      labelSelector: app.kubernetes.io/name=operand-deployment-lifecycle-manager
+      name: odlm-check
       namespace: <operator namespace>
       onError: fail
       selectResource: pod
@@ -368,42 +343,6 @@ spec:
       onError: fail
       selectResource: pod
       timeout: 1200
-      type: check
-    - labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
-      name: setup-tenant
-      namespace: <operator namespace>
-      onError: fail
-      ops:
-        - command: |
-            ["/bin/bash", "-c", "/cs-br/setup_tenant.sh --operator-namespace <operator namespace> --services-namespace <service namespace> --tethered-namespaces <comma delimited (no spaces) list of Cloud Pak workload namespaces that use this foundational services instance> --license-accept -c v<foundational services version number in use i.e. 4.0, 4.1, 4.2, etc> -p <.spec.size value from commonservice cr> -i <install mode, either Manual or Automatic> -s <catalog source name> -n <catalog source namespace> -v"]
-          container: cpfs-util
-          name: setup-tenant-command
-          timeout: 600
-      selectResource: pod
-      type: exec
-    - labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
-      name: setup-tenant-job
-      namespace: <operator namespace>
-      onError: fail
-      ops:
-        - command: |
-            ["/bin/bash", "-c", "oc patch job setup-tenant-job -n <operator namespace> --type=\"json\" -p '[{\"op\": \"remove\", \"path\":\"/spec/suspend\"}]'"]
-          container: cpfs-util
-          name: trigger-setup-tenant-job
-          timeout: 600
-      selectResource: pod
-      type: exec
-    - chks:
-        - condition: '{$.status.phase} == {"Succeeded"}'
-          name: jobComplete
-          onError: fail
-          timeout: 600
-      labelSelector: foundationservices.cloudpak.ibm.com=setup-tenant-job
-      name: setup-tenant-job-check
-      namespace: <operator namespace>
-      onError: fail
-      selectResource: pod
-      timeout: 600
       type: check
     - chks:
         - condition: '{$.status.phase} == {"Running"}'
@@ -515,7 +454,6 @@ spec:
         - group: license-service-reporter-parent
         - group: license-service-reporter-resources
         - hook: zen5-data/backup
-        - group: cpfs-util-volume
         - group: zenservice
         - group: zen-br-resources
         - group: common-services-namespace
@@ -524,13 +462,12 @@ spec:
         - group: common-services-operatorgroups
         - group: common-services-configmaps
         - group: license-service-reporter-crd
-        - group: commonservice-crd
-        - group: commonservice-cr
-        - group: setup-tenant-resources
-        - group: setup-tenant-job-yaml
         - group: singleton-subscriptions
         - group: cert-manager-resources
         - group: license-service-reporter-subscriptions
+        - group: commonservices-crd
+        - group: commonservice-cr
+        - group: nss-resources
         - group: common-services-subscriptions
         - group: operand-resources
         - group: odlm-resources
@@ -546,12 +483,9 @@ spec:
         - group: ow-pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: common-services-configmaps
-        - group: commonservice-crd
         - group: cert-manager-crd
         - group: license-service-reporter-crd
         - group: singleton-subscriptions
-        - group: commonservice-cr
         - hook: cert-manager-operator-check/podReady
         - hook: cert-manager-webhook-check/podReady
         - group: cert-manager-resources
@@ -564,13 +498,13 @@ spec:
         - group: lsr-deployment
         - hook: lsr-deployment/podReady
         - hook: lsr-data/restore
+        # restore common services
+        - group: common-services-configmaps
+        - group: commonservices-crd
+        - group: commonservice-cr
+        - group: nss-resources
         - group: common-services-subscriptions
-        - group: cpfs-util-volume
-        - group: setup-tenant-resources
-        - group: setup-tenant-job-yaml
-        - hook: setup-tenant-check/podReady
-        - hook: setup-tenant-job/trigger-setup-tenant-job
-        - hook: setup-tenant-job-check/jobComplete
+        - hook: nss-check/podReady
         - hook: odlm-check/podReady
         - group: odlm-resources
         - group: operand-resources
