--- a/velero/schedule/mongodb-backup-deployment.yaml
+++ b/velero/schedule/mongodb-backup-deployment.yaml
@@ -14,7 +14,9 @@ spec:
       annotations:
         backup.velero.io/backup-volumes: mongodump
         pre.hook.backup.velero.io/command: '["bash", "-c", "rm -rf /dump/dump/*; cat /cred/mongo-certs/tls.crt /cred/mongo-certs/tls.key > /work-dir/mongo.pem; cat /cred/cluster-ca/tls.crt /cred/cluster-ca/tls.key > /work-dir/ca.pem; mongodump --oplog --out /dump/dump --host mongodb:$MONGODB_SERVICE_PORT --username $ADMIN_USER --password $ADMIN_PASSWORD --authenticationDatabase admin --ssl --sslCAFile /work-dir/ca.pem --sslPEMKeyFile /work-dir/mongo.pem"]'
+        pre.hook.restore.velero.io/on-error: Fail
         post.hook.restore.velero.io/command: '["bash", "-c", "cat /cred/mongo-certs/tls.crt /cred/mongo-certs/tls.key > /work-dir/mongo.pem; cat /cred/cluster-ca/tls.crt /cred/cluster-ca/tls.key > /work-dir/ca.pem; mongorestore --db platform-db --host rs0/icp-mongodb-0.icp-mongodb.<mongo namespace>.svc.cluster.local,icp-mongodb-1.icp-mongodb.<mongo namespace>.svc.cluster.local,icp-mongodb-2.icp-mongodb.<mongo namespace>.svc.cluster.local --port $MONGODB_SERVICE_PORT --username $ADMIN_USER --password $ADMIN_PASSWORD --authenticationDatabase admin --ssl --sslCAFile /work-dir/ca.pem --sslPEMKeyFile /work-dir/mongo.pem /dump/dump/platform-db --drop"]'
+        post.hook.restore.velero.io/on-error: Fail
       name: mongodb-backup
       namespace: <mongo namespace>
       labels:
