sync the lsr recipe changes into common recipe
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns-multi-zen.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns-multi-zen.yaml
@@ -291,13 +291,25 @@ spec:
       selectResource: deployment
       timeout: 600
       type: check
-    - chks:
+   - chks:
         - condition: '{$.status.phase} == {"Running"}'
           name: podReady
           onError: fail
           timeout: 600
       name: license-service-reporter-check
       labelSelector: app.kubernetes.io/name=ibm-license-service-reporter
+      namespace: <lsr namespace>
+      onError: fail
+      selectResource: pod
+      timeout: 600
+      type: check
+    - chks:
+        - condition: '{$.status.phase} == {"Running"}'
+          name: podReady
+          onError: fail
+          timeout: 600
+      name: license-service-reporter-instance-check
+      labelSelector: app.kubernetes.io/instance=ibm-license-service-reporter
       namespace: <lsr namespace>
       onError: fail
       selectResource: pod
@@ -522,7 +534,7 @@ spec:
         - group: common-services-operatorgroups
         - group: common-services-configmaps
         - group: license-service-reporter-crd
-        - group: commonservices-crd
+        - group: commonservice-crd
         - group: commonservice-cr
         - group: nss-resources
         - group: singleton-subscriptions
@@ -553,6 +565,7 @@ spec:
         - group: license-service-reporter-subscriptions
         - hook: license-service-reporter-check/podReady
         - group: license-service-reporter-instances
+        - hook: license-service-reporter-instance-check/podReady
         - group: lsr-pre-deploy
         - group: lsr-volume
         - group: lsr-deployment
