--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -304,6 +304,18 @@ spec:
       timeout: 600
       type: check
     - chks:
+        - condition: '{$.status.phase} == {"Running"}'
+          name: podReady
+          onError: fail
+          timeout: 600
+      name: license-service-reporter-instance-check
+      labelSelector: app.kubernetes.io/instance=ibm-license-service-reporter
+      namespace: <lsr namespace>
+      onError: fail
+      selectResource: pod
+      timeout: 600
+      type: check
+    - chks:
         - condition: '{$.spec.replicas} == {$.status.readyReplicas}'
           name: podReady
           onError: fail
@@ -462,6 +474,8 @@ spec:
         - group: common-services-operatorgroups
         - group: common-services-configmaps
         - group: license-service-reporter-crd
+        - group: commonservice-crd
+        - group: commonservice-cr
         - group: singleton-subscriptions
         - group: cert-manager-resources
         - group: license-service-reporter-subscriptions
@@ -493,6 +507,7 @@ spec:
         - group: license-service-reporter-subscriptions
         - hook: license-service-reporter-check/podReady
         - group: license-service-reporter-instances
+        - hook: license-service-reporter-instance-check/podReady
         - group: lsr-pre-deploy
         - group: lsr-volume
         - group: lsr-deployment
