--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
@@ -268,13 +268,25 @@ spec:
       selectResource: deployment
       timeout: 600
       type: check
-    - chks:
+- chks:
         - condition: '{$.status.phase} == {"Running"}'
           name: podReady
           onError: fail
           timeout: 600
       name: license-service-reporter-check
       labelSelector: app.kubernetes.io/name=ibm-license-service-reporter
+      namespace: <lsr namespace>
+      onError: fail
+      selectResource: pod
+      timeout: 600
+      type: check
+    - chks:
+        - condition: '{$.status.phase} == {"Running"}'
+          name: podReady
+          onError: fail
+          timeout: 600
+      name: license-service-reporter-instance-check
+      labelSelector: app.kubernetes.io/instance=ibm-license-service-reporter
       namespace: <lsr namespace>
       onError: fail
       selectResource: pod
@@ -405,7 +417,6 @@ spec:
         - group: common-services-catalogs
         - group: common-services-operatorgroups
         - group: common-services-configmaps
-        - group: license-service-reporter-crd
         - group: commonservice-crd
         - group: commonservice-cr
         - group: singleton-subscriptions
@@ -436,6 +447,7 @@ spec:
         - group: license-service-reporter-subscriptions
         - hook: license-service-reporter-check/podReady
         - group: license-service-reporter-instances
+        - hook: license-service-reporter-instance-check/podReady
         - group: lsr-pre-deploy
         - group: lsr-volume
         - group: lsr-deployment
