--- a/velero/schedule/common-service-db/cs-db-br-script-cm.yaml
+++ b/velero/schedule/common-service-db/cs-db-br-script-cm.yaml
@@ -119,6 +119,12 @@ data:
         oc apply -f /tmp/oidc-client-registration.yaml
         rm -f /tmp/oidc-client-registration.yaml
         wait_for_oidc
+
+        info “Restarting Platform Auth Service”
+        oc -n $CSDB_NAMESPACE delete pod -l app.kubernetes.io/instance=platform-auth-service
+        info "Wait for previous pod to delete..."
+        sleep 30
+        wait_for_auth_service
     }
 
     function wait_for_oidc {
@@ -143,6 +149,30 @@ data:
             fi
         else
             error "Job $job_name not present."
+        fi
+    }
+
+    function wait_for_auth_service {
+        info "Waiting for pod platform-auth-service to restart in namespace $CSDB_NAMESPACE."  
+        pod_exists=$(oc get pod -l app.kubernetes.io/instance=platform-auth-service -n $CSDB_NAMESPACE --no-headers || echo fail)    
+        if [[ $job_exists != "fail" ]]; then
+            completed=$(oc get pod -l app.kubernetes.io/instance=platform-auth-service -n $CSDB_NAMESPACE --no-headers | awk '{print $2}')
+            retry_count=60
+            while [[ $completed != "1/1" ]] && [[ $retry_count > 0 ]]
+            do
+                info "Wait for pod platform-auth-service to complete. Try again in 5s."
+                sleep 5
+                completed=$(oc get job $job_name -n $CSDB_NAMESPACE --no-headers | awk '{print $2}')
+                retry_count=$retry_count-1
+            done
+
+            if [[ $retry_count == 0 ]] && [[ $completed != "1/1" ]]; then
+                error "Timed out waiting for pod platform-auth-service."
+            else
+                info "Pod platform-auth-service restarted."
+            fi
+        else
+            error "Pod platform-auth-service."
         fi
     }
 
