--- a/velero/schedule/common-service-db/cs-db-role.yaml
+++ b/velero/schedule/common-service-db/cs-db-role.yaml
@@ -33,6 +33,8 @@ rules:
       - pods/status
       - jobs
       - secrets
+      - configmaps
+      - routes
   - verbs:
       - get
       - list
