--- a/velero/schedule/common-service-db/cs-db-role.yaml
+++ b/velero/schedule/common-service-db/cs-db-role.yaml
@@ -20,6 +20,7 @@ rules:
       - extensions
       - apps
       - policy
+      - route.openshift.io
     resources:
       - pods
       - pods/log
