--- a/velero/spectrum-fusion/cert-manager/backup-restore-workflow.yaml
+++ b/velero/spectrum-fusion/cert-manager/backup-restore-workflow.yaml
@@ -114,8 +114,20 @@ spec:
       selectResource: deployment
       timeout: 600
       type: check
+    - chks:
+        - condition: '{$.metadata.name} != null'
+          name: webhookExists
+          onError: fail
+          timeout: 600
+      name: cert-manager-webhook-exists-check
+      nameSelector: cert-manager-webhook
+      namespace: <cert manager namespace>
+      onError: fail
+      selectResource: deployment
+      timeout: 600
+      type: check
   workflows:
-    - failOn: any-error
+    - failOn: essential-error
       name: backup
       sequence:
         - group: pull-secret
@@ -124,9 +136,10 @@ spec:
         - group: common-services-operatorgroups
         - group: cert-manager-subscription
         - group: cert-manager-resources
-    - failOn: any-error
+    - failOn: essential-error
       name: restore
       sequence:
+        - hook: cert-manager-webhook-exists-check/webhookExists
         - group: common-services-namespace
         - group: pull-secret
         - group: ow-pull-secret
