--- a/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
@@ -32,7 +32,7 @@ spec:
       includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: cert-manager-crd
+      name: cert-manager-config-crd
       type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=licensing
       name: licensing-resources
@@ -88,6 +88,11 @@ spec:
         - subscriptions.operators.coreos.com
       labelSelector: foundationservices.cloudpak.ibm.com=singleton-subscription
       name: singleton-subscriptions
+      type: resource
+    - includedResourceTypes:
+        - subscriptions.operators.coreos.com
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
+      name: cert-manager-subscription
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
@@ -238,6 +243,18 @@ spec:
       timeout: 600
       type: check
     - chks:
+        - condition: '{$.metadata.name} != null'
+          name: webhookExists
+          onError: fail
+          timeout: 600
+      name: cert-manager-webhook-exists-check
+      nameSelector: cert-manager-webhook
+      namespace: <cert manager namespace>
+      onError: fail
+      selectResource: deployment
+      timeout: 600
+      type: check
+    - chks:
         - condition: '{$.status.phase} == {"Running"}'
           name: podReady
           onError: fail
@@ -369,15 +386,15 @@ spec:
         - group: pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
+        - group: cert-manager-subscription
+        - group: cert-manager-resources
         - group: common-services-configmaps
         - group: commonservices-crd
         - group: commonservice-cr
         - group: nss-resources
         - group: cs-operator-permissions
         - group: singleton-subscriptions
-        - group: cert-manager-resources
         - group: common-services-subscriptions
-        - group: cert-manager-workload-resources
         - group: operand-resources
         - group: odlm-resources
         - group: licensing-resources
@@ -390,11 +407,16 @@ spec:
         - group: ow-pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: cert-manager-crd
-        - group: singleton-subscriptions
+        - hook: cert-manager-webhook-exists-check/webhookExists
+        - group: cert-manager-config-crd
+        - group: cert-manager-workload-resources
+        - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
         - hook: cert-manager-webhook-check/podReady
-        - group: cert-manager-workload-resources
+        - group: singleton-subscriptions
+        - group: common-services-configmaps
+        - group: commonservice-crd
+        - group: commonservice-cr
         - group: licensing-resources
         # restore common services
         - group: common-services-configmaps
