--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns-multi-zen.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns-multi-zen.yaml
@@ -11,6 +11,7 @@ spec:
         - secrets
         - certificates.cert-manager.io
         - issuers.cert-manager.io
+        - certmanagerconfigs.operator.ibm.com
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
       name: cert-manager-resources
@@ -19,7 +20,13 @@ spec:
       includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: cert-manager-crd
+      name: cert-manager-config-crd
+      type: resource
+    - backupRef: cert-manager-resources
+      includeClusterResources: true
+      includedResourceTypes:
+        - certmanagerconfigs.operator.ibm.com
+      name: cert-manager-config-cr
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
@@ -124,6 +131,11 @@ spec:
         - subscriptions.operators.coreos.com
       labelSelector: foundationservices.cloudpak.ibm.com=singleton-subscription
       name: singleton-subscriptions
+      type: resource
+    - includedResourceTypes:
+        - subscriptions.operators.coreos.com
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
+      name: cert-manager-subscription
       type: resource
     - includedResourceTypes:
         - subscriptions.operators.coreos.com
@@ -274,7 +286,7 @@ spec:
           timeout: 600
       labelSelector: app.kubernetes.io/name=cert-manager
       name: cert-manager-operator-check
-      namespace: ibm-cert-manager
+      namespace: <cert manager namespace>
       onError: fail
       selectResource: pod
       timeout: 600
@@ -286,7 +298,19 @@ spec:
           timeout: 600
       name: cert-manager-webhook-check
       nameSelector: cert-manager-webhook
-      namespace: ibm-cert-manager
+      namespace: <cert manager namespace>
+      onError: fail
+      selectResource: deployment
+      timeout: 600
+      type: check
+    - chks:
+        - condition: '{$.metadata.name} != null'
+          name: webhookExists
+          onError: fail
+          timeout: 600
+      name: cert-manager-webhook-exists-check
+      nameSelector: cert-manager-webhook
+      namespace: <cert manager namespace>
       onError: fail
       selectResource: deployment
       timeout: 600
@@ -520,13 +544,14 @@ spec:
         - group: pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
+        - group: cert-manager-subscription
+        - group: cert-manager-resources
         - group: common-services-configmaps
         - group: license-service-reporter-crd
         - group: commonservices-crd
         - group: commonservice-cr
         - group: nss-resources
         - group: singleton-subscriptions
-        - group: cert-manager-resources
         - group: license-service-reporter-subscriptions
         - group: common-services-subscriptions
         - group: operand-resources
@@ -543,12 +568,17 @@ spec:
         - group: ow-pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: cert-manager-crd
-        - group: license-service-reporter-crd
-        - group: singleton-subscriptions
+        - hook: cert-manager-webhook-exists-check/webhookExists
+        - group: cert-manager-config-crd
+        - group: cert-manager-config-cr
+        - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
         - hook: cert-manager-webhook-check/podReady
-        - group: cert-manager-resources
+        - group: license-service-reporter-crd
+        - group: singleton-subscriptions
+        - group: common-services-configmaps
+        - group: commonservice-crd
+        - group: commonservice-cr
         - group: licensing-resources
         - group: license-service-reporter-subscriptions
         - hook: license-service-reporter-check/podReady
