--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -12,7 +12,7 @@ spec:
         - certificates.cert-manager.io
         - issuers.cert-manager.io
         # - clusterissuers.cert-manager.io
-        # - certmanagerconfigs.operator.ibm.com
+        - certmanagerconfigs.operator.ibm.com
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
       name: cert-manager-resources
@@ -21,7 +21,13 @@ spec:
       includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: cert-manager-crd
+      name: cert-manager-config-crd
+      type: resource
+    - backupRef: cert-manager-resources
+      includeClusterResources: true
+      includedResourceTypes:
+        - certmanagerconfigs.operator.ibm.com
+      name: cert-manager-config-cr
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
@@ -126,6 +132,11 @@ spec:
         - subscriptions.operators.coreos.com
       labelSelector: foundationservices.cloudpak.ibm.com=singleton-subscription
       name: singleton-subscriptions
+      type: resource
+    - includedResourceTypes:
+        - subscriptions.operators.coreos.com
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
+      name: cert-manager-subscription
       type: resource
     - includedResourceTypes:
         - subscriptions.operators.coreos.com
@@ -274,7 +285,7 @@ spec:
           timeout: 600
       labelSelector: app.kubernetes.io/name=cert-manager
       name: cert-manager-operator-check
-      namespace: ibm-cert-manager
+      namespace: <cert manager namespace>
       onError: fail
       selectResource: pod
       timeout: 600
@@ -286,7 +297,19 @@ spec:
           timeout: 600
       name: cert-manager-webhook-check
       nameSelector: cert-manager-webhook
-      namespace: ibm-cert-manager
+      namespace: <cert manager namespace>
+      onError: fail
+      selectResource: deployment
+      timeout: 600
+      type: check
+    - chks:
+        - condition: '{$.metadata.name} != null'
+          name: webhookExists
+          onError: fail
+          timeout: 600
+      name: cert-manager-webhook-exists-check
+      nameSelector: cert-manager-webhook
+      namespace: <cert manager namespace>
       onError: fail
       selectResource: deployment
       timeout: 600
@@ -460,11 +483,12 @@ spec:
         - group: pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: common-services-configmaps
+        - group: cert-manager-subscription
+        - group: cert-manager-resources
         - group: license-service-reporter-crd
         - group: singleton-subscriptions
-        - group: cert-manager-resources
         - group: license-service-reporter-subscriptions
+        - group: common-services-configmaps
         - group: commonservices-crd
         - group: commonservice-cr
         - group: nss-resources
@@ -483,12 +507,17 @@ spec:
         - group: ow-pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
-        - group: cert-manager-crd
-        - group: license-service-reporter-crd
-        - group: singleton-subscriptions
+        - hook: cert-manager-webhook-exists-check/webhookExists
+        - group: cert-manager-config-crd
+        - group: cert-manager-config-cr
+        - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
         - hook: cert-manager-webhook-check/podReady
-        - group: cert-manager-resources
+        - group: license-service-reporter-crd
+        - group: singleton-subscriptions
+        - group: common-services-configmaps
+        - group: commonservice-crd
+        - group: commonservice-cr
         - group: licensing-resources
         - group: license-service-reporter-subscriptions
         - hook: license-service-reporter-check/podReady
