add configmap permission
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/velero/schedule/common-service-db/cs-db-br-script-cm.yaml
+++ b/velero/schedule/common-service-db/cs-db-br-script-cm.yaml
@@ -120,7 +120,7 @@ data:
         rm -f /tmp/oidc-client-registration.yaml
         wait_for_oidc
 
-        info “Restarting Platform Auth Service”
+        info "Restarting platform-auth-service..."
         oc -n $CSDB_NAMESPACE delete pod -l app.kubernetes.io/instance=platform-auth-service
         info "Wait for previous pod to delete..."
         sleep 30
