--- a/velero/spectrum-fusion/cert-manager/backup-restore-workflow.yaml
+++ b/velero/spectrum-fusion/cert-manager/backup-restore-workflow.yaml
@@ -39,7 +39,7 @@ spec:
       includedResourceTypes:
         - certmanagerconfigs.operator.ibm.com
         - customresourcedefinitions.apiextensions.k8s.io
-      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
       name: cert-manager-resources
       type: resource
     - backupRef: cert-manager-resources
@@ -56,37 +56,21 @@ spec:
       type: resource
     - includedResourceTypes:
         - catalogsources.operators.coreos.com
-      labelSelector: foundationservices.cloudpak.ibm.com=catalog
-      name: common-services-catalogs
-      type: resource
-    - includedNamespaces:
-        - openshift-config
-      includedResourceTypes:
-        - secrets
-      labelSelector: foundationservices.cloudpak.ibm.com=pull-secret
-      name: pull-secret
-      type: resource
-    - backupRef: pull-secret
-      includedNamespaces:
-        - openshift-config
-      includedResourceTypes:
-        - secrets
-      labelSelector: foundationservices.cloudpak.ibm.com=pull-secret
-      name: ow-pull-secret
-      restoreOverwriteResources: true
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
+      name: cert-manager-catalog
       type: resource
     - includeClusterResources: true 
-      labelSelector: foundationservices.cloudpak.ibm.com=namespace
-      name: common-services-namespace
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
+      name: cert-manager-namespace
       type: resource
     - includedResourceTypes:
         - operatorgroups.operators.coreos.com
-      labelSelector: foundationservices.cloudpak.ibm.com=operatorgroup
-      name: common-services-operatorgroups
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
+      name: cert-manager-operatorgroup
       type: resource
     - includedResourceTypes:
         - subscriptions.operators.coreos.com
-      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
       name: cert-manager-subscription
       type: resource
   hooks:
@@ -130,21 +114,18 @@ spec:
     - failOn: essential-error
       name: backup
       sequence:
-        - group: pull-secret
-        - group: common-services-namespace
-        - group: common-services-catalogs
-        - group: common-services-operatorgroups
+        - group: cert-manager-namespace
+        - group: cert-manager-catalog
+        - group: cert-manager-operatorgroup
         - group: cert-manager-subscription
         - group: cert-manager-resources
     - failOn: essential-error
       name: restore
       sequence:
         - hook: cert-manager-webhook-exists-check/webhookExists
-        - group: common-services-namespace
-        - group: pull-secret
-        - group: ow-pull-secret
-        - group: common-services-catalogs
-        - group: common-services-operatorgroups
+        - group: cert-manager-namespace
+        - group: cert-manager-catalog
+        - group: cert-manager-operatorgroup
         - group: cert-manager-config-crd
         - group: cert-manager-config-cr
         - group: cert-manager-subscription
